mini_template_macro/tests/create_modifier/missing_result.stderr
error: Modifier requires return type
 --> tests/create_modifier/missing_result.rs:4:1
  |
4 | fn modifier(s: String) {
  | ^^
