mini_template_macro/tests/create_modifier/missing_result.rs
use mini_template_macro::create_modifier;

#[create_modifier]
fn modifier(s: String) {
    s
}

fn main() {}